--- a/src/index.qmd
+++ b/src/index.qmd
@@ -1,8 +1,11 @@
 ---
-title: "Index"
+title: "Amaan's first page"
 format: html
 project:
   type: website
   output-dir: ../docs
   
 ---
+
+#figma prototype{.figma}
+[figma prototype](https://www.figma.com/proto/3ZPl1xHUdabFoQAHHIuqCJ/Prototype?node-id=180-2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=180%3A2)
