--- a/src/index.qmd
+++ b/src/index.qmd
@@ -7,5 +7,17 @@ project:
   
 ---
 
-#figma prototype{.figma}
-[figma prototype](https://www.figma.com/proto/3ZPl1xHUdabFoQAHHIuqCJ/Prototype?node-id=180-2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=180%3A2)
+## Figma prototype
+<https://www.figma.com/proto/3ZPl1xHUdabFoQAHHIuqCJ/Prototype?node-id=180-2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=180%3A2>{.figma}
+
+## Expo web app
+<https://snack.expo.dev/@amaanusmani/hw6>{.expo}
+
+## Sketch1 - Spirit: grief
+<https://editor.p5js.org/Arjuna32/sketches/ADFKwmcYs>{.sketch1}
+
+## Sketch2 - Reflection: light reflects against mirrors
+<https://editor.p5js.org/Arjuna32/sketches/0x6ybYRl6>{.sketch2}
+
+## Sketch3 - Belonging: school of fish
+<https://editor.p5js.org/Arjuna32/sketches/aB0W6IvUR>{.sketch3}
