--- a/src/demo.qmd
+++ b/src/demo.qmd
@@ -1,23 +1,27 @@
 ---
-title: "Amaan's first page"
-format: html
-project:
-  type: website
-  output-dir: ../docs
-  
+title: "Demo"
+format:
+  html:
+    code-fold: true
+jupyter: python3
 ---
 
-## Figma prototype
-<https://www.figma.com/proto/3ZPl1xHUdabFoQAHHIuqCJ/Prototype?node-id=180-2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=180%3A2>{.figma}
+For a demonstration of a line plot on a polar axis, see @fig-polar.
 
-## Expo web app
-<https://snack.expo.dev/@amaanusmani/hw6>{.expo}
+```{python}
+#| label: fig-polar
+#| fig-cap: "A line plot on a polar axis"
 
-## Sketch1 - Spirit: grief
-<https://editor.p5js.org/Arjuna32/sketches/ADFKwmcYs>{.sketch1}
+import numpy as np
+import matplotlib.pyplot as plt
 
-## Sketch2 - Reflection: light reflects against mirrors
-<https://editor.p5js.org/Arjuna32/sketches/0x6ybYRl6>{.sketch2}
-
-## Sketch3 - Belonging: school of fish
-<https://editor.p5js.org/Arjuna32/sketches/aB0W6IvUR>{.sketch3}
+r = np.arange(0, 2, 0.01)
+theta = 2 * np.pi * r
+fig, ax = plt.subplots(
+  subplot_kw = {'projection': 'polar'} 
+)
+ax.plot(theta, r)
+ax.set_rticks([0.5, 1, 1.5, 2])
+ax.grid(True)
+plt.show()
+```
