--- a/src/index.qmd
+++ b/src/index.qmd
@@ -1,23 +1,18 @@
 ---
-title: "Amaan's first page"
-format: html
-project:
-  type: website
-  output-dir: ../docs
-  
+title: "CMSC 475 web site - Amaan Usmani"
+date: last-modified
 ---
 
-## Figma prototype
-<https://www.figma.com/proto/3ZPl1xHUdabFoQAHHIuqCJ/Prototype?node-id=180-2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=180%3A2>{.figma}
+# Hello!
 
-## Expo web app
-<https://snack.expo.dev/@amaanusmani/hw6>{.expo}
+Welcome to my website!
 
-## Sketch1 - Spirit: grief
-<https://editor.p5js.org/Arjuna32/sketches/ADFKwmcYs>{.sketch1}
+This site presents some of the things I've done over the last semester in CMSC 475. Visit the links above in the navigation bar.
 
-## Sketch2 - Reflection: light reflects against mirrors
-<https://editor.p5js.org/Arjuna32/sketches/0x6ybYRl6>{.sketch2}
+Enjoy!
 
-## Sketch3 - Belonging: school of fish
-<https://editor.p5js.org/Arjuna32/sketches/aB0W6IvUR>{.sketch3}
+# Background
+
+This site was built as part of homework assignment 8 for CMSC 475.
+
+<https://lowkeylabs.github.io/cmsc475-202320-materials/homework8.html>
