--- a/src/cmsc475-portfolio.qmd
+++ b/src/cmsc475-portfolio.qmd
@@ -1,17 +1,12 @@
 ---
-title: "Amaan's first page"
+title: "portfolio"
 format: html
-project:
-  type: website
-  output-dir: ../docs
-  
 ---
 
 ## Figma prototype
 <https://www.figma.com/proto/3ZPl1xHUdabFoQAHHIuqCJ/Prototype?node-id=180-2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=180%3A2>{.figma}
 
-## Expo web app
-<https://snack.expo.dev/@amaanusmani/hw6>{.expo}
+
 
 ### Video of mobile app
 
